# cv-snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  backup  requirements.txt
resources/shaders/: gridshader.fs
src/: ai.cpp  ai.py  game.cpp
